--- a/src/styles/profile.css
+++ b/src/styles/profile.css
@@ -1,29 +1,30 @@
 .profile-container {
-    text-align: center;
-    cursor: pointer;
+  text-align: center;
+  cursor: pointer;
 }
 
 .profile-image {
-    border-radius: 50%;
-    margin-top: 20px;
+  border-radius: 50%;
+  margin-top: 20px;
+  height: 120px;
 }
 
 .profile-name {
-    margin-top: -28px;
-    font-family: Poppins;
-    font-size: 20px;
-    font-weight: 600;
-    line-height: 30px;
-    letter-spacing: 0em;
-    color: white;
+  margin-top: -37px;
+  font-family: Poppins;
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 30px;
+  letter-spacing: 0em;
+  color: white;
 }
 
 .profile-email {
-    margin-top: -20px;
-    color: white;
-    font-family: Poppins;
-    font-size: 12px;
-    font-weight: 400;
-    line-height: 18px;
-    letter-spacing: 0em;
+  margin-top: -20px;
+  color: white;
+  font-family: Poppins;
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 18px;
+  letter-spacing: 0em;
 }
